Fri May 23 15:18:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* TAO_IDL/be_interface.cpp:
	* TAO_IDL/be/be_visitor_interface/interface_ci.cpp:
	* TAO_IDL/be/be_visitor_operation/operation_cs.cpp: Added code to
	  initialize the proxy_broker pointers in the constructors.

Fri May 23 15:08:50 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:

          Fixed generated code for the _tao_any_destructor.

Fri May 23 13:21:06 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * tao/Any.cpp: Moved explicit template instantiations for
	  ValueBase and AbstractBase to its own library.
	
	* tao/ObjectKey_Table.cpp: Fixed template instantiations for
	  RB_Tree. 
	
	* tao/Messaging/MessagingC.cpp: Removed unnecessary template
	  instantiations. 

	* tao/Valuetype/AbstractBase.cpp: 
	* tao/Valuetype/Seq_Tmplinst.cpp: Template instantiations for the
	  ValueType library.

Fri May 23 11:16:31 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From David Kinder <david.kinder@sophos.com>
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Credentials.cpp (operator==):

	  Fixed logic error in comparison of two TAO_SSLIOP_Credentials
	  objects.  [Bug 1509]

Fri May 23 10:59:50 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Valuetype_Adapter.h: Cleaned the interface to the ORB to
	  provide a consistent way of performing operations on ValueType. 
	
	* tao/ORB.h: Removed references to TAO_ValueFactory_Map. Cache a
	  pointer to the ValueFactory_Adapter instead. 
	
	* tao/ORB.cpp: Integrated patches from Vincent Korkos
	  <vincent.korkos@fr.thalesgroup.com>  which contained the
	  implentation of the ORB::unregister_value_factory (). 

	  Did some cosmetic fixes to the implementations of
	  lookup_value_factory () and register_value_factory (). 
	
	* tao/Valuetype/Valuetype_Adapter_Impl.cpp (vf_map_find):
	  Implemented the new adapter interfaces.
