@@ -1,3 +1,8 @@
+Fri May 23 15:35:18 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tao/Object.cpp (is_nil_i): Added a new conditional check for
+	  null objects in partially evaluated IOR's.
+
 Fri May 23 15:18:32 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* TAO_IDL/be_interface.cpp:
